@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-17T00:46:56Z",
+  "timestamp" : "2025-11-19T00:45:20Z",
   "count_outdated" : 282,
   "uniques_outdated" : 248,
-  "count" : 284,
-  "uniques" : 250,
+  "count" : 285,
+  "uniques" : 251,
   "clones" : [
     {
       "timestamp": "2025-11-07T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-11-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
