@@ -1,3 +1,12 @@
+2025-11-19T00:45:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19485627815 # 813
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-19
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 248 282 / 250 284
+* notice: next accum: outdated-unq outdated-all / unq all: 248 282 / 251 285
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-11-18]
+
 2025-11-17T00:46:56Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19414863258 # 811
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-17
